src/main/java/org/example/interfaceSegregastion/example/good/CanEat.java
package org.example.interfaceSegregastion.example.good;

public interface CanEat {
    void eat();
}
