src/main/java/org/example/interfaceSegregastion/example/bad/Bird.java
package org.example.interfaceSegregastion.example.bad;

public interface Bird {

    void eat();
    void walk();
    void fly();
}
